--- a/stylesheets/sass/_general.scss
+++ b/stylesheets/sass/_general.scss
@@ -4,7 +4,7 @@ html {
   font-size: 62.5%;
 
   @include query($large-1, 'min-width') {
-    font-size: 85.5%;
+    font-size: 87.5%;
   }
 }
 
@@ -119,7 +119,7 @@ body {
   @include rem-fallback(padding-top, 30);
 
   .front-page & {
-    @include rem-fallback(max-width, 450);
+    max-width: 100%;
   }
 
   .content-page & {
@@ -139,7 +139,7 @@ body {
 
   .container-inner & {
     .front-page & {
-      @include rem-fallback(max-width, 450);
+
     }
 
     .content-page & {
