--- a/stylesheets/sass/_menus.scss
+++ b/stylesheets/sass/_menus.scss
@@ -443,6 +443,10 @@
 
     .svg & {
       background-image: url('../assets/ico-flags.svg');
+
+      @include query($large-1, 'min-width') {
+        background-image: url('../assets/ico-flags-large.svg');
+      }
     }
   }
 }
@@ -452,8 +456,8 @@
 
   &.expanded {
     position: absolute;
-    @include rem-fallback(top, 18);
-    @include rem-fallback(right, -12);
+    @include rem-fallback(top, 28);
+    @include rem-fallback(right, -6);
     display: block;
     @include rem-fallback(margin-bottom, 40);
     @include rem-fallback(padding, 6, 0);
@@ -466,62 +470,65 @@
 
   .edit-btn {
     display: block;
-    @include rem-fallback(padding, 8, 20, 3);
+    @include rem-fallback(padding, 8, 18, 3);
     text-align: right;
   }
 }
 
 // Language flag icons positioning in the spritemap.
 $flags:
-(sq,   0        0),
-(hy,  -20px     0),
-(bn,  -40px     0),
-(pt,  -60px     0),
-(bg,  -80px     0),
-(zh, -100px     0),
-(hr, -120px     0),
-(da, -140px     0),
-(cs, -160px     0),
-(et, -180px     0),
+(sq,   0 ,     0),
+(hy,  -20,     0),
+(bn,  -40,     0),
+(pt,  -60,     0),
+(bg,  -80,     0),
+(zh, -100,     0),
+(hr, -120,     0),
+(da, -140,     0),
+(cs, -160,     0),
+(et, -180,     0),
 
-(fi,    0px -14px),
-(fr,  -20px -14px),
-(ka,  -40px -14px),
-(de,  -60px -14px),
-(el,  -80px -14px),
-(hu, -100px -14px),
-(is, -120px -14px),
-(hi, -140px -14px),
-(id, -160px -14px),
-(fa, -180px -14px),
+(fi,    0, -14),
+(fr,  -20, -14),
+(ka,  -40, -14),
+(de,  -60, -14),
+(el,  -80, -14),
+(hu, -100, -14),
+(is, -120, -14),
+(hi, -140, -14),
+(id, -160, -14),
+(fa, -180, -14),
 
-(he,    0px -28px),
-(it,  -20px -28px),
-(ja,  -40px -28px),
-(ko,  -60px -28px),
-(lv,  -80px -28px),
-(lt, -100px -28px),
-(ms, -120px -28px),
-(nl, -140px -28px),
-(no, -160px -28px),
-(ur, -180px -28px),
+(he,    0, -28),
+(it,  -20, -28),
+(ja,  -40, -28),
+(ko,  -60, -28),
+(lv,  -80, -28),
+(lt, -100, -28),
+(ms, -120, -28),
+(nl, -140, -28),
+(no, -160, -28),
+(ur, -180, -28),
 
-(fil,   0px -42px),
-(pl,  -20px -42px),
-(ro,  -40px -42px),
-(ru,  -60px -42px),
-(ar,  -80px -42px),
-(lt, -100px -42px),
-(sk, -120px -42px),
-(es, -140px -42px),
-(sv, -160px -42px),
-(tr, -180px -42px),
-(uk,    0px -56px),
-(en,  -20px -56px)
+(fil,   0, -42),
+(pl,  -20, -42),
+(ro,  -40, -42),
+(ru,  -60, -42),
+(ar,  -80, -42),
+(lt, -100, -42),
+(sk, -120, -42),
+(es, -140, -42),
+(sv, -160, -42),
+(tr, -180, -42),
+
+(uk,    0, -56),
+(en,  -20, -56)
 ;
 
-@each $flag, $pos in $flags {
-  .lang-flag-#{$flag}:after { background-position: $pos; }
+@each $flag, $left, $top in $flags {
+  .lang-flag-#{$flag}:after { background-position: #{$left}px #{$top}px; }
+
+  .lang-flag-#{$flag}:after { background-position: #{$left / 10}rem #{$top / 10}rem; }
 }
 
 // Styling rules for the site's blog article tags menu. These rules affects both - the blog article listing view and the single blog article view.
